# sateko

./: .gitignore  Cargo.toml  LICENSE  README.md
bf/: hello.bf  puta.bf  rot13.bf  simple_loop.bf
src/: ast.rs  exec.rs  main.rs  token.rs
