[package]
name = "sateko"
version = "1.0.0"
edition = "2018"
authors = ["Nathan Scowcroft <ns@endrake.com>"]
description = "sateko brainfuck"
license = "0BSD"
publish = false

[dependencies]
argparse = "0.2"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
