[package]
name = "sateko"
version = "0.1.0"
edition = "2018"
authors = ["Nathan Scowcroft <ns@endrake.com>"]
description = "A toy brainfuck compiler"
homepage = "https://github.com/scowcron/sateko"
license = "BSD-3-Clause"
license-file = "LICENSE"
repository = "https://github.com/scowcron/sateko"
readme = "README.md"
keywords = ["brainfuck", "compiler", "toy"]
categories = ["compilers"]

[dependencies]
argparse = "0.2"
inkwell = { version="0.1.0-beta.3", features = ["llvm12-0"] }
